EFSDEV-195 added milestone endpoints.
