# backend/src/routes/index.ts
@@ -6,6 +6,7 @@ import helloRoutes from "./hello/routes";
 import usersRoutes from "./users/routes";
 import companiesRoutes from "./companies/routes";
 import projectsRoutes from "./projects/routes";
+import milestonesRoutes from "./milestones/routes";
 
 const router = Router();
 
@@ -14,6 +15,7 @@ router.use("/v1/auth", authRoutes);
 router.use("/v1/users", usersRoutes);
 router.use("/v1/companies", companiesRoutes);
 router.use("/v1/projects", projectsRoutes);
+router.use("/v1/milestones", milestonesRoutes);
 router.use("/v1/ai-demo", aiDemoRoutes);
 
 export default router;
